tests/negative/_cycle_back.orb
// TODO variadic opers
import "tests/negative/test_import_cycle.orb";
